Some improvements, like cached loading
* Added Wuffels as a 3D model
* Added cached loading for faster loads once you've watched a model. It
doesn't pre-load at the moment.
* Added instructions on how to use the app.
-- Requires styling, and probably should be closed automatically if a
user does certain actions.

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,3 +1,4 @@
 <div class="toolbar-container">
   <app-toolbar-product-item *ngFor="let item of productConfiguratorService.items" [item]="item"></app-toolbar-product-item>
+  <app-toolbar-instructions *ngIf="!hasReadInstructions" (closed)="hasReadInstructions = true;" ></app-toolbar-instructions>
 </div>
