Styled the instructions panel, added prod build
* Added animation when closing and some other small styling.
* Added first build for gh-pages.

--- a/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
+++ b/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
@@ -1,4 +1,3 @@
-<div class="instructions-container">
-  <p>Drag to rotate camera. Scroll to zoom in and out. <span class="close-button" (click)="closeInstructions()">🗙</span></p>
-
+<div class="instructions-container" [@close]="isOpen ? 'open' : 'closed'">
+  <p [hidden]="!isTextVisible">Drag to rotate camera. Scroll to zoom in and out. <span class="close-button" (click)="closeInstructions()">🗙</span></p>
 </div>
