Added loading spinner
* Added loading spinner until the model has loaded along with the
textures.
* Updated some styles like changed the X because the old one had unicode
issues in android phone at least.

--- a/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
+++ b/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
@@ -1,3 +1,4 @@
 <div class="instructions-container" [@close]="isOpen ? 'open' : 'closed'">
-  <p [hidden]="!isTextVisible">Drag to rotate camera. Scroll to zoom in and out. <span class="close-button" (click)="closeInstructions()">🗙</span></p>
+  <p [hidden]="!isTextVisible">Drag to rotate camera. Scroll to zoom in and out.
+    <span class="close-button" (click)="closeInstructions()">✖</span></p>
 </div>
