--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="container-3D">
   <app-viewer-threejs (sceneInit)="onSceneInit($event)" ></app-viewer-threejs>
   <app-toolbar></app-toolbar>
+  <app-loading-spinner *ngIf="loadingsStarted !== loadingsFinished"></app-loading-spinner>
 </div>
 
 
