Added PBR furnitures
* Misc changes like localStorage to only show instructions once.
* Converted 2 examples to ES6 modules.
* Added gltf loader
* Added gamma space as option.
* Changed lighting from hemispheric to 1 key light and 2 extra lights.
* Added 4 PBR furnitures for some better rendering quality.
* enabled anti-aliasing :)
* Reduced file sizes a bit on thumbnails etc!

--- a/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
+++ b/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
@@ -1,4 +1,4 @@
 <div class="instructions-container" [@close]="isOpen ? 'open' : 'closed'">
   <p [hidden]="!isTextVisible">Drag to rotate camera. Scroll to zoom in and out.
-    <span class="close-button" (click)="closeInstructions()">✖</span></p>
+    <span class="close-button" (click)="closeInstructionsButton()">✖</span></p>
 </div>
