Styling fixes and new build.
* Reduced auto closure for instructions to 10 seconds.
* Set the height when it's closed instead of fixed 50px.
* Removed position absolute from instructions, instead placed it ontop
of the product-items.

--- a/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
+++ b/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.html
@@ -1,4 +1,5 @@
-<div class="instructions-container" [@close]="isOpen ? 'open' : 'closed'">
-  <p [hidden]="!isTextVisible">Drag to rotate camera. Scroll to zoom in and out.
+<div #instructionContainer class="instructions-container" [@close]="isOpen ? 'open' : 'closed'">
+  <p [hidden]="!isTextVisible">
+    <span class="close-text">Drag to rotate camera. Scroll to zoom in and out.</span>
     <span class="close-button" (click)="closeInstructionsButton()">✖</span></p>
 </div>
