--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
