--- a/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.scss
+++ b/src/app/toolbar/toolbar-instructions/toolbar-instructions.component.scss
@@ -1,25 +1,37 @@
+$container-padding: 15px;
+$container-margin: 5px;
+
 :host{
   // Allow user to drag & rotate & zoom even while pointer is ontop of the instruction text.
   pointer-events: none;
 }
 
 .instructions-container {
-  position: absolute;
-  bottom: 75px;
-  // So that the container always has a height even if the text is hidden.
-  height: 50px;
+  padding-top: $container-padding;
+  padding-bottom: $container-padding;
+  margin-bottom: $container-margin;
   width: 100%;
   background-color: antiquewhite;
   // just disable blue outline if user text selects on the X
   user-select: none;
+
+  p {
+    display: flex;
+    margin: 0;
+  }
+
+}
+
+.close-text {
+  flex-grow: 1;
 }
 
 .close-button {
   cursor: pointer;
-  float: right;
   margin-right: 15px;
   // The close button still requires pointer events!!
   pointer-events: all;
   // Align the X better as otherwise it's slightly offset
-  line-height: 1.2em;
+  //line-height: 1.2em;
+  margin-left: 5px;
 }
