Subproduct & Texture changer part 1
* Added start of subproducts which is a smaller item to change something
for the product. In the example I'll be using it's a texture.
* Added texture changer class to animate a texture change so it's not
instant. It looks fancy.
* Added a debug-canvas which is used to visualize the texture change if
necessary.

--- a/src/app/toolbar/toolbar-product-item/toolbar-product-item.component.html
+++ b/src/app/toolbar/toolbar-product-item/toolbar-product-item.component.html
@@ -1,4 +1,4 @@
-<div class="product-item" >
+<div #containerElement class="product-item" >
   <img
     [ngClass]="{ 'active': productConfiguratorService.selectedProduct === item }"
     [src]="item.thumbnail"
