--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,3 +6,12 @@
 body {
   margin: 0;
 }
+
+.debug-canvas {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 256px;
+  height: 256px;
+  z-index: 1000;
+}
