--- a/src/app/toolbar/toolbar-subitem-container/toolbar-subitem-container.component.html
+++ b/src/app/toolbar/toolbar-subitem-container/toolbar-subitem-container.component.html
@@ -1,4 +1,9 @@
-<div #containerElement>
-  <app-toolbar-subitem *ngFor="let subItem of subItems" [item]="subItem"></app-toolbar-subitem>
+<div #containerElement class="sub-item-container">
+  <div #subItemsElement class="sub-items">
+    <app-toolbar-subitem *ngFor="let subItem of productItem.subItems"
+      [item]="subItem"
+      [productItem]="productItem"
+    ></app-toolbar-subitem>
+  </div>
 </div>
 
