--- a/src/app/toolbar/toolbar-subitem-container/toolbar-subitem-container.component.scss
+++ b/src/app/toolbar/toolbar-subitem-container/toolbar-subitem-container.component.scss
@@ -1,3 +1,13 @@
-app-toolbar-subitem {
+app-toolbar-subitem:not(:last-child) {
   margin-right: 10px;
+}
+
+.sub-item-container {
+  position: relative;
+  text-align: left;
+}
+
+.sub-items {
+  position: relative;
+  display: inline-block;
 }
