--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -2,7 +2,8 @@
   <app-toolbar-instructions *ngIf="!hasReadInstructions" (closed)="hasReadInstructions = true;" ></app-toolbar-instructions>
   <app-toolbar-subitem-container
     *ngIf="productConfiguratorService.selectedProduct.subItems.length > 0 && productConfiguratorService.selectedProduct.object3D"
-    [subItems]="productConfiguratorService.selectedProduct.subItems" >
+    [productItem]="productConfiguratorService.selectedProduct"
+  >
   </app-toolbar-subitem-container>
   <app-toolbar-product-item *ngFor="let item of productConfiguratorService.items" [item]="item"></app-toolbar-product-item>
 </div>
