Small tweaks like comments.

--- a/src/app/toolbar/toolbar-subitem/toolbar-subitem.component.html
+++ b/src/app/toolbar/toolbar-subitem/toolbar-subitem.component.html
@@ -2,5 +2,5 @@
      (click)="clicked()"
      [title]="this.item.tooltip"
 >
-  <img [src]="this.item.image" [alt]="this.item.tooltip" [class.active]="productItem.selectedSubItem === this.item.id" />
+  <img [src]="this.item.image" [alt]="this.item.tooltip" [class.active]="productItem.selectedSubItem === this.item" />
 </div>
