--- a/src/app/loading-spinner/loading-spinner.component.html
+++ b/src/app/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,4 @@
 <div class="loading-spinner">
   <img src="assets/loading.svg">
+  <div class="loading-progress">{{loadingProgress}}</div>
 </div>
-
