--- a/src/app/loading-spinner/loading-spinner.component.scss
+++ b/src/app/loading-spinner/loading-spinner.component.scss
@@ -1,4 +1,6 @@
 $size: 128px;
+// Same colour as the loading-spinner svg.
+$fontColor: #faebd7;
 
 .loading-spinner {
   width: $size;
@@ -6,7 +8,14 @@ $size: 128px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left:-($size * 0.5);
-  margin-top:-($size * 0.5);
+  margin-left: -($size * 0.5);
+  margin-top: -($size * 0.5);
   z-index: 2;
+}
+
+.loading-progress {
+  position: relative;
+  font-size: 24px;
+  text-align: center;
+  color: $fontColor;
 }
