Sharable product url
** Does not work with subproducts yet ** So chear url does not work!

- Moved all the app component code to its own component (product-viewer)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="container-3D">
-  <app-viewer-threejs (sceneInit)="onSceneInit($event)" ></app-viewer-threejs>
-  <app-toolbar></app-toolbar>
-  <app-loading-spinner *ngIf="loadingsStarted !== loadingsFinished"></app-loading-spinner>
-</div>
+<router-outlet></router-outlet>
 
 
