--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,9 +1,8 @@
 <div class="toolbar-container">
   <app-toolbar-instructions *ngIf="!hasReadInstructions" (closed)="hasReadInstructions = true;" ></app-toolbar-instructions>
   <app-toolbar-subitem-container
-    *ngIf="productConfiguratorService.selectedProduct?.subItems.length > 0 && productConfiguratorService.selectedProduct?.object3D"
-    [productItem]="productConfiguratorService.selectedProduct"
-  >
-  </app-toolbar-subitem-container>
+    *ngIf="selectedProduct && hasSubItems"
+    [productItem]="selectedProduct"
+  ></app-toolbar-subitem-container>
   <app-toolbar-product-item *ngFor="let item of productConfiguratorService.items" [item]="item"></app-toolbar-product-item>
 </div>
