--- a/src/app/product-viewer/product-viewer.component.html
+++ b/src/app/product-viewer/product-viewer.component.html
@@ -1,5 +1,6 @@
 <div class="container-3D">
   <app-viewer-threejs (sceneInit)="onSceneInit($event)" ></app-viewer-threejs>
   <app-toolbar></app-toolbar>
+  <app-sidebar></app-sidebar>
   <app-loading-spinner *ngIf="loadingsStarted !== loadingsFinished"></app-loading-spinner>
 </div>
