Added selected mesh highlighting, added [title] as tooltip and allow camera to zoom in a bit closer.

--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -19,6 +19,7 @@ $width: 300px;
   z-index: 1;
 
   width: $width;
+  padding: 0.5em;
   background-color: hsl(0, 0%, 22%);
   border-left: 1px solid hsl(0, 0%, 50%);
 }
