--- a/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.html
+++ b/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.html
@@ -1,1 +1,3 @@
-<input type="color" (input)="colorChanged($event)">
+<label>Edit colour: </label>
+<br>
+<input type="color" (input)="colorChanged($event)" [value]="initialColor">
