17: Added support to animate a specific colour from A -> B -> ...

--- a/src/app/sidebar/sidebar-specific-colors/sidebar-specific-colors.component.html
+++ b/src/app/sidebar/sidebar-specific-colors/sidebar-specific-colors.component.html
@@ -3,6 +3,11 @@
 </p>
 <ul class="specific-color-values">
   <li *ngFor="let value of values" class="item" [class.active]="currentValue === value">
-    <div *ngIf="isColorValues" class="item-content" [ngStyle]="{ backgroundColor: value }"></div>
+    <div
+      *ngIf="isColorValues"
+      class="item-content"
+      [ngStyle]="{ backgroundColor: value }"
+      (click)="changeCurrentColor(value)"
+    ></div>
   </li>
 </ul>
