17: Added texture animation and inline spinner CSS and other things!

--- a/src/app/sidebar/sidebar-specific-color/sidebar-specific-color.component.html
+++ b/src/app/sidebar/sidebar-specific-color/sidebar-specific-color.component.html
@@ -1,10 +1,13 @@
 <p>
-  Edit {{ isColorValues ? 'color' : 'texture' }}:
+  Edit color:
 </p>
 <ul class="specific-color-values">
-  <li *ngFor="let value of values" class="item" [class.active]="currentValue === value">
+  <li
+    *ngFor="let value of values"
+    class="item item-color"
+    [class.active]="currentValue === value"
+  >
     <div
-      *ngIf="isColorValues"
       class="item-content"
       [ngStyle]="{ backgroundColor: value }"
       (click)="changeCurrentColor(value)"
