--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -9,3 +9,10 @@
     border: none;
   }
 }
+
+@mixin inline-spinner-size($size) {
+  .inline-spinner:after {
+    width: $size;
+    height: $size;
+  }
+}
