--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,7 @@
 $input-color-size: 64px;
+$input-texture-size: 128px;
+
+$inline-spinner-default-size: 32px;
 
 $active-color: hsl(180, 100%, 50%);
 $active-hover-color: hsl(180, 100%, 40%);
