--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "styles/inline-loading-spinner";
+
 * {
   box-sizing: border-box;
 }
@@ -14,7 +16,7 @@ p {
 .debug-canvas {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   width: 256px;
   height: 256px;
   z-index: 1000;
