--- a/src/styles/inline-loading-spinner.scss
+++ b/src/styles/inline-loading-spinner.scss
@@ -10,6 +10,6 @@
   width: $inline-spinner-default-size;
   height: $inline-spinner-default-size;
 
-  background-image: url("../assets/loading.svg");
+  background-image: url("/assets/loading.svg");
   background-repeat: no-repeat;
 }
