--- a/src/styles/inline-loading-spinner.scss
+++ b/src/styles/inline-loading-spinner.scss
@@ -1,4 +1,4 @@
-@import "vars";
+@use "vars";
 
 .inline-spinner:after {
   content: "";
@@ -7,8 +7,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: $inline-spinner-default-size;
-  height: $inline-spinner-default-size;
+  width: vars.$inline-spinner-default-size;
+  height: vars.$inline-spinner-default-size;
 
   background-image: url("/assets/loading.svg");
   background-repeat: no-repeat;
