--- a/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.scss
+++ b/src/app/sidebar/sidebar-free-color/sidebar-free-color.component.scss
@@ -1,13 +1,13 @@
-@import "./src/styles/vars";
-@import "./src/styles/_mixins.scss";
+@use "./src/styles/vars";
+@use "./src/styles/mixins";
 
 input[type="color"] {
-  width: $input-color-size;
+  width: vars.$input-color-size;
   max-width: 100%;
-  height: $input-color-size;
+  height: vars.$input-color-size;
   padding: 0;
   border: none;
 }
 
-@include remove-input-color-border();
+@include mixins.remove-input-color-border();
 
