--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,6 @@
+@import "styles/variables/colors";
 @import "styles/inline-loading-spinner";
+@import "styles/icons";
 
 * {
   box-sizing: border-box;
