--- a/src/app/loading-spinner/loading-spinner.component.scss
+++ b/src/app/loading-spinner/loading-spinner.component.scss
@@ -1,3 +1,5 @@
+@use "../../styles/variables/zindex";
+
 $size: 128px;
 // Same colour as the loading-spinner svg.
 $fontColor: #faebd7;
@@ -10,7 +12,7 @@ $fontColor: #faebd7;
   left: 50%;
   margin-left: -($size * 0.5);
   margin-top: -($size * 0.5);
-  z-index: 2;
+  z-index: zindex.$above-canvas;
   // Otherwise if the loading-spinner stalls because of network requests you can select the image & text and it looks bad.
   user-select: none;
 }
