33: Added start of tools to the left that are always available and some overlay practices.

--- a/src/app/product-viewer/product-viewer.component.html
+++ b/src/app/product-viewer/product-viewer.component.html
@@ -2,6 +2,7 @@
   <div #canvasContainer class="container-3d">
     <app-viewer-threejs (sceneInit)="onSceneInit($event)" ></app-viewer-threejs>
   </div>
+  <viewer-tools-toolbar></viewer-tools-toolbar>
   <app-toolbar></app-toolbar>
   <app-sidebar></app-sidebar>
   <app-loading-spinner *ngIf="loadingsStarted !== loadingsFinished"></app-loading-spinner>
