33: Added tree structure with work in progress nodes and refactored css a bit to use more variables.

--- a/src/app/sidebar/sidebar-specific-color/sidebar-specific-color.component.scss
+++ b/src/app/sidebar/sidebar-specific-color/sidebar-specific-color.component.scss
@@ -22,7 +22,7 @@
 }
 
 .active {
-  border: 1px solid vars.$active-color;
+  border: 1px solid var(--color-active);
 }
 
 @include mixins.remove-input-color-border();
