--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,4 +1,5 @@
-@use "../../styles/variables/zindex";
+@use "zindex";
+@use "spacing";
 
 $width: 300px;
 
@@ -22,9 +23,9 @@ $width: 300px;
   z-index: zindex.$content;
 
   width: $width;
-  padding: 0.5em;
-  background-color: hsl(0, 0%, 22%);
-  border-left: 1px solid hsl(0, 0%, 50%);
+  padding: var(--spacer-50);
+  background-color: var(--color-background);
+  border-left: 1px solid var(----color-border);
 
   color: snow;
 }
