--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import "styles/variables/colors";
+@use "colors";
+@use "spacing";
 @import "styles/inline-loading-spinner";
 @import "styles/icons";
 
@@ -6,9 +7,15 @@
   box-sizing: border-box;
 }
 
+:root {
+  @include colors.color-variables();
+  @include spacing.spacing-variables();
+}
+
 /* You can add global styles to this file, and also import other style files */
 body {
   margin: 0;
+  color: var(--color-text);
 }
 
 p {
