--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-viewer-tool/hierarchy-viewer-tool.component.html
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-viewer-tool/hierarchy-viewer-tool.component.html
@@ -1,1 +1,1 @@
-<i class="icon" title="Show 3D hierarchy" (click)="toggleHierarchyViewer()">👁</i>
+<i class="icon icon-interactive icon-fixed-size icon-hierarchy-list" title="Show 3D hierarchy" (click)="toggleHierarchyViewer()"></i>
