--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,13 +1,18 @@
+@import "~src/assets/icons/app-icons";
+
 .icon {
-  font-size: 2.5em;
-  width: 1.25em;
-  height: 1.25em;
-  line-height: 1em;
+  font-family: 'app-icons';
+  // It's used on <i> tag which is italic, I did not forget about that and had the icons not be centered ^.^
+  font-style: normal;
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  cursor: pointer;
   user-select: none;
+  font-size: 2.5em;
+}
+
+.icon-interactive {
+  cursor: pointer;
 
   &:hover {
     color: var(--color-active-hover);
@@ -15,5 +20,20 @@
 
   &:active {
     color: var(--color-active);
+  }
+}
+
+.icon-fixed-size {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  // We'll use the .icon-* classes to render the icon which uses :before { content: 'symbol'; }
+  &:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   }
 }
