--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -2,13 +2,16 @@ $background: hsl(0, 0%, 22%);
 $border: hsl(0, 0%, 50%);
 $text: snow;
 
-$active: hsl(180, 100%, 50%);
-$active-hover: hsl(180, 100%, 40%);
+$alternative: hsl(250, 100%, 75%);
+$active: hsl(170, 100%, 75%);
+$active-hover: hsl(170, 100%, 65%);
 
 @mixin color-variables {
   --color-background: #{$background};
   --color-border: #{$border};
   --color-text: #{$text};
+
+  --color-alternative: #{$alternative};
 
   --color-active: #{$active};
   --color-active-hover: #{$active-hover};
