--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-overlay/hierarchy-overlay.component.scss
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-overlay/hierarchy-overlay.component.scss
@@ -1,5 +1,6 @@
 @use "zindex";
 @use "spacing";
+@use "interactions";
 
 $left: 3.125em;
 
@@ -15,10 +16,19 @@ $left: 3.125em;
 .hierarchy-body {
   display: inline-block;
   padding: var(--spacer-50);
-  border-left: 1px solid var(--color-border);
-  border-top: 1px solid var(--color-border);
-  border-right: 1px solid var(--color-border);
+  border: 1px solid var(--color-border);
   background-color: var(--color-background);
 
   pointer-events: all;
+
+  overflow-y: auto;
+  max-height: 90vh;
+  max-width: 400px;
+}
+
+.close {
+  cursor: pointer;
+  display: inline-block;
+
+  @include interactions.hover-focus-active-default-interaction();
 }
