--- a/src/app/sidebar/sidebar-specific-texture/sidebar-specific-texture.component.scss
+++ b/src/app/sidebar/sidebar-specific-texture/sidebar-specific-texture.component.scss
@@ -1,5 +1,5 @@
 @use "./src/styles/vars";
-@use "./src/styles/mixins";
+@use "../../../styles/mixins/mixins";
 
 .specific-color-values {
   padding: 0;
