--- a/src/styles/variables/_spacing.scss
+++ b/src/styles/variables/_spacing.scss
@@ -1,7 +1,9 @@
+$spacer-25: 0.25em;
 $spacer-50: 0.5em;
 $spacer-100: 1em;
 
 @mixin spacing-variables {
+  --spacer-25: #{$spacer-25};
   --spacer-50: #{$spacer-50};
   --spacer-100: #{$spacer-100};
 }
