--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
@@ -1,20 +1,43 @@
 <div
-  #displayName
+  #nodeElement
   class="node"
   [class.is-hoverable]="isHoverable"
   [class.is-selectable]="isSelectable"
   style="margin-left: {{ marginLeft }}"
   (pointerenter)="setHoveredObject()"
   (pointerleave)="unsetHoveredObject()"
+  (focus)="setHoveredObject()"
+  (blur)="unsetHoveredObject()"
   (click)="selectObject()"
   (keyup.enter)="selectObject()"
-  [tabIndex]="isHoverable ? 1 : -1"
+  [tabIndex]="isHoverable ? 0 : ''"
 >
-  <i class="icon">&#xea03;</i>
-  <span class="display-name">{{ name }}</span>
+  <div
+    *ngIf="canExpand"
+    class="toggle-expanded"
+    [class.is-expanded]="isExpanded"
+    (click)="isExpanded = !isExpanded"
+  >
+    <span class="arrow"></span>
+  </div>
+  <i class="icon" [innerHTML]="nodeIcon"></i>
+  <div class="display">
+    <span class="display-name">{{ name }}</span>
+    <div *ngIf="canExpand" class="child-icons" [class.is-expanded]="isExpanded">
+      <i *ngFor="let child of children" class="icon" [innerHTML]="child.icon"></i>
+    </div>
+  </div>
   <div class="options">
     <input type="checkbox" [checked]="node.visible">
   </div>
 </div>
-<hierarchy-tree-node *ngFor="let child of node.children" [node]="child" [depth]="depth + 1"></hierarchy-tree-node>
+<div
+  *ngIf="children.length"
+  class="node-children"
+  [class.is-collapsed]="!isExpanded"
+>
+  <hierarchy-tree-node *ngFor="let child of children" [node]="child.node" [depth]="depth + 1"></hierarchy-tree-node>
+</div>
+
+
 
