--- a/src/styles/variables/_colors.scss
+++ b/src/styles/variables/_colors.scss
@@ -9,6 +9,9 @@ $disabled: hsl(229, 15%, 50%);
 $active: hsl(170, 100%, 75%);
 $active-hover: hsl(170, 100%, 65%);
 
+$active-background: hsl(0, 0%, 32%);
+$active-background-hover: hsl(0, 0%, 27%);
+
 @mixin color-variables {
   --color-background: #{$background};
   --color-border: #{$border};
@@ -19,4 +22,8 @@ $active-hover: hsl(170, 100%, 65%);
   --color-disabled: #{$disabled};
   --color-active: #{$active};
   --color-active-hover: #{$active-hover};
+
+  --color-active-bg: #{$active-background};
+  --color-active-bg-hover: #{$active-background-hover};
+
 }
