33: Minor style updates for the tool icon, added visibility toggle functionality and solved not updating data when changing product.

--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-tree-node/hierarchy-tree-node.component.html
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="options">
-    <input type="checkbox" [checked]="node.visible">
+    <input type="checkbox" [checked]="node.visible" (click)="toggleVisibility($event)" (keyup.enter)="toggleVisibility($event)">
   </div>
 </div>
 <div
