--- a/src/app/overlay-items/hierarchy-viewer/hierarchy-tree/hierarchy-tree.component.html
+++ b/src/app/overlay-items/hierarchy-viewer/hierarchy-tree/hierarchy-tree.component.html
@@ -1,3 +1,3 @@
 <div class="nodes">
-  <hierarchy-tree-node *ngIf="rootNode" [node]="rootNode" [depth]="0"></hierarchy-tree-node>
+  <hierarchy-tree-node *ngFor="let rootNode of rootNodes" [node]="rootNode" [depth]="0"></hierarchy-tree-node>
 </div>
