--- a/src/styles/mixins/_interactions.scss
+++ b/src/styles/mixins/_interactions.scss
@@ -1,26 +1,26 @@
-@mixin hover-interaction() {
+@mixin hover-interaction($hover: var(--color-active-hover)) {
   &:hover {
-    color: var(--color-active-hover);
+    color: $hover;
     @content;
   }
 }
 
-@mixin focus-interaction() {
+@mixin focus-interaction($hover: var(--color-active-hover)) {
   &:focus {
-    color: var(--color-active-hover);
+    color: $hover;
     @content;
   }
 }
 
-@mixin active-interaction() {
+@mixin active-interaction($active: var(--color-active)) {
   &:active {
-    color: var(--color-active);
+    color: $active;
     @content;
   }
 }
 
-@mixin hover-focus-active-default-interaction() {
-  @include hover-interaction;
-  @include focus-interaction;
-  @include active-interaction;
+@mixin hover-focus-active-default-interaction($hover: var(--color-active-hover), $active: var(--color-active)) {
+  @include hover-interaction($hover);
+  @include focus-interaction($hover);
+  @include active-interaction($active);
 }
